--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type="text/babel">
         document.getElementById('s').onclick = function () {
       ReactDOM.render(
-        <h1>李楚宁你似不似sa？</h1>,
+        <h1>张希瑞你似不似sa？</h1>,
         document.getElementById('root')
       );
         }
